--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       font-size: 0.9em;
     }
   </style>
-</head>
+<link rel="icon" href="favicon.png" type="image/png"></head>
 <body>
   <header>
     <h1>Niraimadhi</h1>
