--- a/index.html
+++ b/index.html
@@ -1,107 +1,65 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Niraimadhi Kumkumadi Oil</title>
+  <meta name="description" content="Niraimadhi - Pure Kumkumadi Oil for radiant and glowing skin.">
+  <meta name="keywords" content="kumkumadi oil, ayurvedic skincare, natural face oil, Niraimadhi">
+  <meta name="author" content="Niraimadhi">
+  <link rel="icon" href="favicon.png" type="image/png">
   <style>
     body {
-      font-family: 'Georgia', serif;
-      background-color: #fff8f0;
+      font-family: Arial, sans-serif;
       margin: 0;
-      color: #2c1a09;
+      padding: 0;
+      background-color: #fff8f0;
+      text-align: center;
     }
     header {
-      background-color: #f8e1c4;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    .product {
-      text-align: center;
-    }
-    .product img {
-      max-width: 200px;
-      border-radius: 12px;
-      margin-bottom: 20px;
-    }
-    .benefits, .ingredients {
-      margin-top: 30px;
-    }
-    .contact {
-      background-color: #f2d3b1;
-      padding: 30px;
-      text-align: center;
-      margin-top: 40px;
-      border-radius: 12px;
-    }
-    .contact a {
-      display: inline-block;
-      background-color: #8c5e2a;
+      background-color: #8d6e63;
       color: white;
-      padding: 12px 24px;
+      padding: 20px;
+    }
+    main {
+      margin: 20px;
+    }
+    .contact-button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #d4a373;
+      color: white;
       text-decoration: none;
-      border-radius: 8px;
-      margin-top: 10px;
+      border-radius: 5px;
+      font-size: 18px;
     }
     footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #f8e1c4;
-      font-size: 0.9em;
+      margin-top: 40px;
+      padding: 10px;
+      background-color: #8d6e63;
+      color: white;
     }
   </style>
-<link rel="icon" href="favicon.png" type="image/png"></head>
+</head>
+
 <body>
   <header>
     <h1>Niraimadhi</h1>
     <p>Pure Kumkumadi Oil for Radiant Skin</p>
   </header>
 
-  <section class="product">
-    <img src="https://via.placeholder.com/200x250?text=15ml+Bottle" alt="Kumkumadi Oil">
-    <h2>15ml Kumkumadi Oil</h2>
-    <p>Experience the ancient beauty secret in every drop.</p>
-
-    <div class="benefits">
-      <h3>Benefits</h3>
-      <ul>
-        <li>Brightens complexion</li>
-        <li>Reduces dark spots and pigmentation</li>
-        <li>Improves skin texture and tone</li>
-        <li>100% natural ingredients</li>
-      </ul>
-    </div>
-
-    <div class="ingredients">
-      <h3>Key Ingredients</h3>
-      <ul>
-        <li>Saffron (Kesar)</li>
-        <li>Sandalwood</li>
-        <li>Licorice</li>
-        <li>Lotus extract</li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="contact">
+  <main>
     <h2>Contact to Order</h2>
-    <p>Reach out to us to place your order or ask questions.</p>
-    <a href="https://wa.me/91XXXXXXXXXX" target="_blank">Order on WhatsApp</a>
-    <p>or email us at <strong>niraimadhi@example.com</strong></p>
-  </section>
+    <p>Get the glow you deserve with the magic of Kumkumadi Oil.</p>
+    <a class="contact-button" href="mailto:your@email.com">Email Us</a>
+  </main>
 
   <footer>
     &copy; 2025 Niraimadhi. All rights reserved.
   </footer>
 </body>
+
 </html>
