--- a/index.html
+++ b/index.html
@@ -1,65 +1,37 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Niraimadhi Kumkumadi Oil</title>
-  <meta name="description" content="Niraimadhi - Pure Kumkumadi Oil for radiant and glowing skin.">
-  <meta name="keywords" content="kumkumadi oil, ayurvedic skincare, natural face oil, Niraimadhi">
-  <meta name="author" content="Niraimadhi">
-  <link rel="icon" href="favicon.png" type="image/png">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #fff8f0;
-      text-align: center;
-    }
-    header {
-      background-color: #8d6e63;
-      color: white;
-      padding: 20px;
-    }
-    main {
-      margin: 20px;
-    }
-    .contact-button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #d4a373;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-size: 18px;
-    }
-    footer {
-      margin-top: 40px;
-      padding: 10px;
-      background-color: #8d6e63;
-      color: white;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Niraimadhi</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; background-color: #fdf6ec; color: #5c4033; text-align: center; }
+        header { background-color: #8d6e63; padding: 20px; }
+        header img { height: 100px; margin-bottom: 10px; }
+        header h1 { margin: 0; color: #fff; }
+        main img { width: 250px; margin-top: 20px; border-radius: 12px; }
+        .content { margin: 30px; }
+        button { background-color: #d7b899; color: white; padding: 12px 24px; font-size: 16px; border: none; border-radius: 6px; cursor: pointer; margin-top: 20px; }
+        footer { background-color: #8d6e63; padding: 10px; font-size: 14px; color: white; position: fixed; width: 100%; bottom: 0; }
+    </style>
 </head>
-
 <body>
-  <header>
-    <h1>Niraimadhi</h1>
-    <p>Pure Kumkumadi Oil for Radiant Skin</p>
-  </header>
-
-  <main>
-    <h2>Contact to Order</h2>
-    <p>Get the glow you deserve with the magic of Kumkumadi Oil.</p>
-    <a class="contact-button" href="mailto:your@email.com">Email Us</a>
-  </main>
-
-  <footer>
-    &copy; 2025 Niraimadhi. All rights reserved.
-  </footer>
+    <header>
+        <img src="logo.png" alt="Niraimadhi Logo">
+        <h1>Niraimadhi</h1>
+        <p>Pure Kumkumadi Oil for Radiant Skin</p>
+    </header>
+    <main>
+        <img src="product.jpg" alt="Niraimadhi Kumkumadi Oil Bottle">
+        <div class="content">
+            <h2>Contact to Order</h2>
+            <p>Get the glow you deserve with the magic of Kumkumadi Oil.</p>
+            <a href="mailto:your@email.com"><button>Email Us</button></a>
+        </div>
+    </main>
+    <footer>
+        © 2025 Niraimadhi. All rights reserved.
+    </footer>
 </body>
-
 </html>
