--- a/index.html
+++ b/index.html
@@ -1,37 +1,76 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niraimadhi</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; background-color: #fdf6ec; color: #5c4033; text-align: center; }
-        header { background-color: #8d6e63; padding: 20px; }
-        header img { height: 100px; margin-bottom: 10px; }
-        header h1 { margin: 0; color: #fff; }
-        main img { width: 250px; margin-top: 20px; border-radius: 12px; }
-        .content { margin: 30px; }
-        button { background-color: #d7b899; color: white; padding: 12px 24px; font-size: 16px; border: none; border-radius: 6px; cursor: pointer; margin-top: 20px; }
-        footer { background-color: #8d6e63; padding: 10px; font-size: 14px; color: white; position: fixed; width: 100%; bottom: 0; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Niraimadhi - Kumkumadi Oil</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f0e8;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #8b5e3c;
+      color: white;
+      padding: 20px 0;
+    }
+    header img {
+      width: 100px;
+      margin-bottom: 10px;
+    }
+    h1 {
+      margin: 10px 0 5px;
+    }
+    p {
+      margin: 5px 0 20px;
+      font-size: 18px;
+    }
+    .content img {
+      width: 200px;
+      margin: 20px 0;
+    }
+    .button {
+      background-color: #d19a66;
+      color: white;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      text-decoration: none;
+      margin-top: 20px;
+      display: inline-block;
+    }
+    footer {
+      background-color: #8b5e3c;
+      color: white;
+      padding: 10px 0;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Niraimadhi Logo">
-        <h1>Niraimadhi</h1>
-        <p>Pure Kumkumadi Oil for Radiant Skin</p>
-    </header>
-    <main>
-        <img src="product.jpg" alt="Niraimadhi Kumkumadi Oil Bottle">
-        <div class="content">
-            <h2>Contact to Order</h2>
-            <p>Get the glow you deserve with the magic of Kumkumadi Oil.</p>
-            <a href="mailto:your@email.com"><button>Email Us</button></a>
-        </div>
-    </main>
-    <footer>
-        © 2025 Niraimadhi. All rights reserved.
-    </footer>
+
+<header>
+  <img src="logo.png" alt="Niraimadhi Logo">
+  <h1>Niraimadhi</h1>
+  <p>Pure Kumkumadi Oil for Radiant Skin</p>
+</header>
+
+<div class="content">
+  <img src="product.jpg" alt="Niraimadhi Kumkumadi Oil Bottle">
+  <h2>Contact to Order</h2>
+  <p>Get the glow you deserve with the magic of Kumkumadi Oil.</p>
+  <a href="mailto:your-email@example.com" class="button">Email Us</a>
+</div>
+
+<footer>
+  <p>© 2025 Niraimadhi. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
+
