--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -62,7 +61,7 @@
 </header>
 
 <div class="content">
-  <img src="product.jpg" alt="Niraimadhi Kumkumadi Oil Bottle">
+  <img src="product.png" alt="Niraimadhi Kumkumadi Oil Bottle">
   <h2>Contact to Order</h2>
   <p>Get the glow you deserve with the magic of Kumkumadi Oil.</p>
   <a href="mailto:your-email@example.com" class="button">Email Us</a>
