--- a/index.html
+++ b/index.html
@@ -3,73 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Niraimadhi - Kumkumadi Oil</title>
+  <title>Niraimadhi Kumkumadi Oil</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f7f0e8;
+      line-height: 1.6;
       margin: 0;
       padding: 0;
+      background-color: #FCF8F3;
+      color: #333;
+    }
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 40px 20px;
       text-align: center;
     }
-    header {
-      background-color: #8b5e3c;
-      color: white;
-      padding: 20px 0;
-    }
-    header img {
-      width: 100px;
-      margin-bottom: 10px;
-    }
     h1 {
-      margin: 10px 0 5px;
+      margin-bottom: 0.2em;
+      color: #333;
     }
-    p {
-      margin: 5px 0 20px;
-      font-size: 18px;
+    .tagline {
+      font-style: italic;
+      color: #666;
+      margin-top: 0;
+      margin-bottom: 1em;
     }
-    .content img {
-      width: 200px;
-      margin: 20px 0;
-    }
-    .button {
-      background-color: #d19a66;
-      color: white;
-      padding: 12px 25px;
-      border: none;
-      border-radius: 8px;
-      font-size: 18px;
-      cursor: pointer;
-      text-decoration: none;
-      margin-top: 20px;
+    .btn {
       display: inline-block;
+      background-color: #F4A261;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      margin: 15px 0;
     }
-    footer {
-      background-color: #8b5e3c;
-      color: white;
-      padding: 10px 0;
-      margin-top: 30px;
+    .btn:hover {
+      background-color: #e69549;
+    }
+    h2 {
+      margin-top: 2em;
+      color: #333;
+    }
+    .benefits ul {
+      list-style: none;
+      padding: 0;
+    }
+    .benefits li {
+      text-align: left;
+      margin: 10px 0;
+      padding-left: 1.2em;
+      position: relative;
+    }
+    .benefits li:before {
+      content: "✔";
+      color: #4CAF50;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+    a {
+      color: #2A9D8F;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .contact p {
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Niraimadhi Kumkumadi Oil</h1>
+    <p class="tagline">A luxurious saffron-based facial oil for radiant, youthful skin.</p>
+    <a href="https://wa.me/919042541492" class="btn" target="_blank">Order Now on WhatsApp</a>
 
-<header>
-  <img src="logo.png" alt="Niraimadhi Logo">
-  <h1>Niraimadhi</h1>
-  <p>Pure Kumkumadi Oil for Radiant Skin</p>
-</header>
+    <section class="benefits">
+      <h2>Key Benefits</h2>
+      <ul>
+        <li>Brightens skin complexion</li>
+        <li>Reduces pigmentation and dark circles</li>
+        <li>Deeply nourishes and hydrates</li>
+        <li>Improves skin texture and radiance</li>
+      </ul>
+    </section>
 
-<div class="content">
-  <img src="product.png" alt="Niraimadhi Kumkumadi Oil Bottle">
-  <h2>Contact to Order</h2>
-  <p>Get the glow you deserve with the magic of Kumkumadi Oil.</p>
-  <a href="mailto:your-email@example.com" class="button">Email Us</a>
-</div>
+    <section class="about">
+      <h2>About Niraimadhi Kumkumadi Oil</h2>
+      <p>Each drop of Niraimadhi Kumkumadi Oil is enriched with premium herbs like saffron, sandalwood, and manjistha to rejuvenate and brighten the skin.</p>
+    </section>
 
-<footer>
-  <p>© 2025 Niraimadhi. All rights reserved.</p>
-</footer>
-
+    <section class="contact">
+      <h2>Contact Us</h2>
+      <p>WhatsApp: <a href="https://wa.me/919042541492" target="_blank">+91 9042541492</a></p>
+      <p>Email: <a href="mailto:psbriji@gmail.com">psbriji@gmail.com</a></p>
+      <p>Follow us on <a href="#">Instagram</a> and <a href="#">Facebook</a>.</p>
+    </section>
+  </div>
 </body>
 </html>
