--- a/index.html
+++ b/index.html
@@ -3,104 +3,106 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Niraimadhi Kumkumadi Oil</title>
+  <title>Niraimadhi - Kumkumadi Oil</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
+      background-color: #f7f0e8;
       margin: 0;
       padding: 0;
-      background-color: #FCF8F3;
-      color: #333;
-    }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 40px 20px;
       text-align: center;
     }
+    header {
+      background-color: #8b5e3c;
+      color: white;
+      padding: 20px 0;
+    }
+    header img {
+      width: 100px;
+      margin-bottom: 10px;
+    }
     h1 {
-      margin-bottom: 0.2em;
-      color: #333;
+      margin: 10px 0 5px;
     }
-    .tagline {
-      font-style: italic;
-      color: #666;
-      margin-top: 0;
-      margin-bottom: 1em;
+    p {
+      margin: 5px 0 20px;
+      font-size: 18px;
     }
-    .btn {
-      display: inline-block;
-      background-color: #F4A261;
-      color: #fff;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 5px;
-      margin: 15px 0;
+    .content img {
+      width: 200px;
+      margin: 20px 0;
     }
-    .btn:hover {
-      background-color: #e69549;
+    section {
+      padding: 20px;
     }
     h2 {
-      margin-top: 2em;
-      color: #333;
+      color: #8b5e3c;
     }
-    .benefits ul {
-      list-style: none;
-      padding: 0;
-    }
-    .benefits li {
-      text-align: left;
-      margin: 10px 0;
-      padding-left: 1.2em;
-      position: relative;
-    }
-    .benefits li:before {
-      content: "✔";
-      color: #4CAF50;
-      position: absolute;
-      left: 0;
-      top: 0;
-    }
-    a {
-      color: #2A9D8F;
+    .button {
+      background-color: #d19a66;
+      color: white;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
       text-decoration: none;
+      margin-top: 20px;
+      display: inline-block;
     }
-    a:hover {
-      text-decoration: underline;
-    }
-    .contact p {
-      margin: 5px 0;
+    footer {
+      background-color: #8b5e3c;
+      color: white;
+      padding: 10px 0;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Niraimadhi Kumkumadi Oil</h1>
-    <p class="tagline">A luxurious saffron-based facial oil for radiant, youthful skin.</p>
-    <a href="https://wa.me/919042541492" class="btn" target="_blank">Order Now on WhatsApp</a>
 
-    <section class="benefits">
-      <h2>Key Benefits</h2>
-      <ul>
-        <li>Brightens skin complexion</li>
-        <li>Reduces pigmentation and dark circles</li>
-        <li>Deeply nourishes and hydrates</li>
-        <li>Improves skin texture and radiance</li>
-      </ul>
-    </section>
+<header>
+  <img src="logo.png" alt="Niraimadhi Logo">
+  <h1>Niraimadhi</h1>
+  <p>Pure Kumkumadi Oil for Radiant Skin</p>
+</header>
 
-    <section class="about">
-      <h2>About Niraimadhi Kumkumadi Oil</h2>
-      <p>Each drop of Niraimadhi Kumkumadi Oil is enriched with premium herbs like saffron, sandalwood, and manjistha to rejuvenate and brighten the skin.</p>
-    </section>
+<div class="content">
+  <img src="product.png" alt="Niraimadhi Kumkumadi Oil">
+  <h1>Niraimadhi Kumkumadi Oil</h1>
+  <p>A luxurious saffron-based facial oil for radiant, youthful skin.</p>
+</div>
 
-    <section class="contact">
-      <h2>Contact Us</h2>
-      <p>WhatsApp: <a href="https://wa.me/919042541492" target="_blank">+91 9042541492</a></p>
-      <p>Email: <a href="mailto:psbriji@gmail.com">psbriji@gmail.com</a></p>
-      <p>Follow us on <a href="#">Instagram</a> and <a href="#">Facebook</a>.</p>
-    </section>
-  </div>
+<section>
+  <h2>Key Benefits</h2>
+  <ul style="text-align: left; max-width: 600px; margin: auto; font-size: 18px;">
+    <li>Brightens complexion</li>
+    <li>Reduces pigmentation and dark spots</li>
+    <li>Improves skin texture</li>
+    <li>Fights signs of aging</li>
+  </ul>
+</section>
+
+<section>
+  <h2>About Our Oil</h2>
+  <p style="max-width: 600px; margin: auto; font-size: 18px;">
+    Handcrafted using the finest natural ingredients, our Kumkumadi Oil is a blend of saffron, sandalwood, and herbal extracts to nourish your skin deeply.
+  </p>
+</section>
+
+<section>
+  <h2>Product Information</h2>
+  <p style="font-size: 18px;">Size: 15ml</p>
+</section>
+
+<section>
+  <h2>Contact Us</h2>
+  <p style="font-size: 18px;">Phone: <a href="https://wa.me/919042541492" style="color: #8b5e3c;">+91 90425 41492 (WhatsApp)</a></p>
+  <p style="font-size: 18px;">Email: <a href="mailto:psbriji@gmail.com" style="color: #8b5e3c;">psbriji@gmail.com</a></p>
+</section>
+
+<footer>
+  <p>© 2025 Niraimadhi. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
